# pysemdist_svc

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
helm/pysemdist/: Chart.yaml  values.yaml
helm/pysemdist/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  service.yaml
k8s/: deployment.yaml  ollama.yaml  secret.example.yaml
scripts/: run_pipeline.py
src/pysemdist/: __main__.py  cluster.py  cluster_kmeans.py  config.py  db.py  embed.py  embeddings.py  goals_service.py  io_utils.py  label.py  llm.py  meta.py  preprocess.py  repository.py  summarize.py  summarizer.py  utils.py
src/pysemdist/api/: main.py
